# LLM-Research-

./: .cursorrules  .dockerignore  .env.example  .gitignore  ANSWER_TO_YOUR_QUESTION.md  ARCHITECTURE_DIAGRAM.md  COMPLETE-SYSTEM-MANIFEST.md  COMPLETION_REPORT.md  DEPLOYMENT-STEPS.md  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.txt  INDEX.md  LICENSE  Makefile  NOCTUA_DEPLOYMENT.txt  NOCTUA_PROJECT_STRUCTURE.md  NOCTUA_README.md  NOTATION_ANALYSIS.md  PROJECT-SUMMARY.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  RAVEN_ARCHITECTURE.md  README.md  README_TRADING_BOT.md  RESEARCH.md  START-HERE.md  START_HERE.md  STRATOS-INTEGRATION.md  STRATOS-QUICKSTART.txt  TELE-PROMPTR-FILES.md  TELE-PROMPTR-SETUP.md  VERSION  VISUAL_OVERVIEW.md  build_noctua.py  deploy.sh  docker-compose.yml  n8n_flow.json  raven.service  (+3 more)
.3ox/: !3ox.key  QUICKSTART.txt  config.toml  dashboard.py  manifest.toml  noctua.db  owl.py  telegram_bot.py
3ox/: QUICKSTART_BOOKWORM.md  README_BOOKWORM_COMPLETE.md
EON_RD/: README.md  executive_summary.md
Tele-Prompter/: .env.example  27_TOKEN_STRATEGIES.md  CHEAT_SHEET.md  DEPLOY.md  DEPLOYMENT_PACKAGE.md  FEATURE_RESEARCH.md  IMPLEMENTATION_EXAMPLES.md  QUICKSTART.md  QUICK_START_GUIDE.md  README.md  ROADMAP.md  START_HERE.txt  docker-compose.yml  seed.sql  (+1 more)
obsidian_cli/: README.md  pyproject.toml
obsidian_cli/src/obsidian_cli/: chunk.py  cli.py  config.py  lint.py
obsidian_cli/src/obsidian_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stratos/engine/: Cargo.toml
stratos/engine/src/: lib.rs  main.rs
(+102 files in other folders)
