[package]
name = "engine-stratos"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[lib]
name = "engine_stratos"
path = "src/lib.rs"

[[bin]]
name = "stratos"
path = "src/main.rs"
